--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -1,4 +1,4 @@
-name: C CI
+name: Build and install test CI
 
 on:
   push:
@@ -13,12 +13,15 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+
     - name: install dependencies
       run: |
         sudo apt install -y clang llvm libcjson-dev libcurl4-openssl-dev
     - name: make
       run: make
+
     - name: sudo make install
       run: sudo make install 
+
     - name: make clean
       run: make clean
